# publishWeatherSensors

./: README.md  appmap.yml  install-dependencies.sh  pyproject.toml  supervisord.conf  supervisord.service
publishweathersensors/: config.json  fastapimqtt.py  main.py  publishWeatherSensors.py
tests/: test_publishweathersensors.py
