[tool.poetry]
name = "publishWeatherSensors"
version = "0.1.0"
description = ""
authors = ["Philip Cutler <greenthegarden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.5.1"
marshmallow = "^3.10.0"
desert = "^2020.11.18"
APScheduler = "^3.7.0"
redis = "^3.5.3"
python-configuration = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
main = "publishweathersensors.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
